solved. to never have the navbar collapse, take off the sm, md, lg, etc of the navbar-expand class

--- a/static/src/css/navbar.css
+++ b/static/src/css/navbar.css
@@ -1,5 +1,5 @@
 .navbar .navbar-nav {
   margin: auto;
-  width: 31%;
   white-space: nowrap; 
+  overflow-x: scroll;
 }
